--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
 		}
 	],
 	"require": {
-		"php": ">=7.1.0",
-		"nette/utils": "^3.0",
-		"mathematicator-core/search": "~1.0"
+		"php": ">=7.1.0"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "^0.12.18",
