--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,15 @@
 		}
 	],
 	"require": {
-		"php": ">=7.1.0"
+		"php": "^8.0"
 	},
 	"require-dev": {
-		"tracy/tracy": "^2.8",
 		"phpstan/phpstan": "^0.12.74",
+		"tracy/tracy": "^2.8",
 		"phpstan/phpstan-nette": "^0.12.14",
 		"spaze/phpstan-disallowed-calls": "^1.1",
-		"roave/security-advisories": "dev-master"
+		"roave/security-advisories": "dev-master",
+		"jetbrains/phpstorm-attributes": "^1.0"
 	},
 	"autoload": {
 		"classmap": [
